<resources>
    <string name="app_name">GPS_App_3</string>
    <string name="start_location_scan">START LOCATION SCAN</string>
    <string name="stop_location_scan">STOP LOCATION SCAN</string>
    <string name="show_database">Show database</string>
    <string name="pause_location_scan">Pause location scan</string>
    <string name="location_service">Location Service</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_trip_name">Enter trip name</string>
    <string name="show_user_s_trips">Show user\'s trips</string>
    <string name="your_trips">Your trips</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="view_map">View map</string>
</resources>